# cc_beats

./: .gitattributes  .gitignore  README.md  main.ipynb  new_playground.ipynb  playground.ipynb  pyproject.toml  tokeniser.py
cc_beats/: modules.py  tokeniser.py  utils.py
logs/from_colab/: checkpoint_epoch_15.pth  checkpoint_epoch_20.pth  checkpoint_epoch_5.pth  events.out.tfevents.1746109112.5de580539f63.58188.0
